# rust-projects

./: .gitignore  README.md
axum-usage/: Cargo.toml  README.md
axum-usage/example/public/: index.html
axum-usage/src/: lib.rs  main.rs  message.rs
desktop-webcam/: index.html  package.json  pnpm-lock.yaml
desktop-webcam/src/: App.vue
desktop-webcam/src-tauri/: Cargo.toml  tauri.conf.json
desktop-webcam/src/common/: cv-util.js
dioxus-app/: Cargo.toml  Dioxus.toml  READMD.md  index.html  todos_dioxus.json
dioxus-app/assets/: style.css
dioxus-app/public/: style.css
dioxus-app/src/: lib.rs  main.rs  models.rs  props.rs  study.rs  use_state.rs
dioxus-app/src/components/: mod.rs  todo_filter.rs  todo_input.rs  todo_item.rs
dioxus-app/src/platform/: desktop.rs  mod.rs  web.rs
proc-marcos/: Cargo.toml
proc-marcos/proc-builder/: Cargo.toml
proc-marcos/proc-builder/examples/: command.rs  command_with_attr.rs  darlingDemo.rs
proc-marcos/proc-builder/src/: builder.rs  builder_with_attr.rs  lib.rs
proc-marcos/proc-proce/: Cargo.toml  README.md
proc-marcos/proc-proce/examples/: generate.rs
proc-marcos/proc-proce/src/: json_schema.rs  lib.rs
risp/: README.md
risp/src/: main.rs
tauri-quicke/: README.md  package.json  pnpm-lock.yaml
tauri-quicke/src/: App copy 2.vue  App copy.vue  App.vue  main.js  style.css
tauri-quicke/src-tauri/: Cargo.toml  tauri.conf.json
tauri-quicke/src-tauri/src/: main.rs
thread-pools/: Cargo.toml  main.html
thread-pools/.cargo/: config.toml
thread-pools/src/: lib.rs  main.rs
trunk-learn/: Cargo.toml  index.html
trunk-learn/src/: index.js  index.scss  lib.rs  main.rs
web2image/: Cargo.toml  README.md
web2image/src/: lib.rs  main.rs
webcam/: Cargo.toml  README.md  Trunk.toml  glue.js
webcam/.cargo/: config.toml
webcam/src/: lib.rs  main.rs
webcam/src-tauri/: Cargo.toml  tauri.conf.json
webcam/src-tauri/src/: main.rs
webcam/src/components/: controls.rs  mod.rs  video.rs
webcam/src/model/: devices.rs  mod.rs  video_stream.rs
xdiff/: Cargo.toml  README.md
xdiff/fixtures/: bad.yml  diff.yml  diff1.txt  req.yml  test.yaml
xdiff/src/: cli.rs  lib.rs  main.rs  utils.rs
xdiff/src/config/: diff.rs  mod.rs  req.rs
xdiff/tests/: cli_test.rs  config_test.rs  utils_test.rs
xdiff/tests/cmd/: te.md  xdiff_run_failed.md  xdiff_run_success.md  xreq_run_success.md
yew-short-link/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
yew-short-link/src/: main.rs  router.rs
yew-short-link/src/pages/: create.rs  link_to.rs  links.rs  mod.rs
