[package]
name = "axum-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"]}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
rust-embed = "8.0.0"
