[package]
name = "axum-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
axum = { version = "0.6", features = ["headers", "ws"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
rust-embed = "8.0.0"
mime_guess = "2.0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5"

[dev-dependencies]
anyhow = "1"
fake-socket = "0.2"
