[package]
name = "web2image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
headless_chrome = "1.0.8"
qrcode = "0.12"
# 使用24版本会报错
image = "0.23.14" 
url = "2.5.0"
clap = { version = "4.4.11", features = ["derive"] }
