[package]
name = "webcam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sycamore = { version = "0.8.0-beta", features = ["serde", "suspense", "futures"] }
tracing = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "VideoTrack",
    "HtmlVideoElement",
    "HtmlSelectElement",
    "Navigator", 
    "MediaStream", 
    "MediaDevices", 
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaStreamConstraints",
    "Permissions",
    "HtmlCanvasElement",
]

[workspace]
members = [".", "src-tauri"]