[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "xdiff"
path = "src/bin/xdiff.rs"

[[bin]]
name = "xreq"
path = "src/bin/xreq.rs"

[dependencies]
anyhow = "1.0.75" # 错误处理
async-trait = "0.1.74" # 异步trait
atty = "0.2.14" # 终端输入环境判断
clap = { version = "4.4.7", features = ["derive"] } # 命令行cli
console = "0.15.7"
dialoguer = "0.11.0" # 收集终端输入
http-serde = "1.1.3"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.27"
similar = { version = "2.3.0", features = ["inline"] }
syntect = "5.1.0" # 终端美化
tokio = { version = "1.33.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }

[dev-dependencies]
mockito = "1.2.0"
trycmd = "0.14.19"
