[package]
name = "proc-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
heck = "0.4"
proc-macro2 = "1"
quote = "1"
syn = {version = "2.0", features = ["extra-traits"]}
darling = "0.20"